# paper_data

./: .gitignore  README.md  env.example  pyproject.toml  requirements-notebook.txt  requirements.txt
docs/: paper_dataset_alignment.md  research_methodology_and_dataset_evaluation.md
notebooks/: 00_patentsview_patentsearch_quickstart.ipynb  01_kipris_openapi_quickstart.ipynb  02_kipris_dataset_builder.ipynb  03_kipris_fulltext_collector.ipynb  kipris_semiconductor_ai_dataset.jsonl
scripts/: build_prior_art_chunks.py
src/ptab_dataset/: __init__.py  api.py  chunking.py  config.py  downloader.py  parser.py  patentsview.py  pipeline.py  storage.py
src/ptab_dataset.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
